feat: rediseño de ui para agricultor y config por json
